--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,10 +16,13 @@
 
     gtag('config', 'UA-180175294-1');
     </script>
-
 </head>
 <body>
-
+    <style>
+    * {
+        font-family: Courier;
+    }
+    </style>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
@@ -26,106 +30,97 @@
                     
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="navbar-toggler-icon"></span>
-                    </button> <a class="navbar-brand" href="#">Brand</a>
+                    </button> <a class="navbar-brand" href="https://amonguschat.herokuapp.com"><img src="{% static 'logo.png' %}" alt="among us chat logo" style="width:50%;"></a>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="#" style="font-family: Courier;">Home</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#" style="font-family: Courier;">About</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Dropdown link</a>
+                            <li class="nav-item dropdown active">
+                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" style="font-family: Courier;">Community</a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a> <a class="dropdown-item" href="#">Something else here</a>
+                                    <a class="dropdown-item" href="#" style="font-family: Courier;">Action</a> <a class="dropdown-item" href="#" style="font-family: Courier;">Another action</a> <a class="dropdown-item" href="#" style="font-family: Courier;">Something else here</a>
                                     <div class="dropdown-divider">
-                                    </div> <a class="dropdown-item" href="#">Separated link</a>
+                                    </div> <a class="dropdown-item" href="#" style="font-family: Courier;">Separated link</a>
                                 </div>
                             </li>
                         </ul>
                         <form class="form-inline">
                             <input class="form-control mr-sm-2" type="text" /> 
-                            <button class="btn btn-primary my-2 my-sm-0" type="submit">
+                            <button class="btn btn-primary my-2 my-sm-0" type="submit" style="font-family: Courier;">
                                 Search
                             </button>
                         </form>
                         <ul class="navbar-nav ml-md-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="#" style="font-family: Courier;">FAQ <span class="sr-only">(current)</span></a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Dropdown link</a>
+                            <li class="nav-item dropdown active">
+                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" style="font-family: Courier;">Support</a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a> <a class="dropdown-item" href="#">Something else here</a>
+                                    <a class="dropdown-item" href="#" style="font-family: Courier;">Direct Contact</a> <a class="dropdown-item" href="#" style="font-family: Courier;">Collaborate</a> <a class="dropdown-item" href="#" style="font-family: Courier;">Sponsor Us</a>
                                     <div class="dropdown-divider">
-                                    </div> <a class="dropdown-item" href="#">Separated link</a>
+                                    </div> <a class="dropdown-item" href="#" style="color:red;font-family: Courier;">Report</a>
                                 </div>
                             </li>
                         </ul>
                     </div>
                 </nav>
                 <div class="jumbotron">
-                    <h2>
-                        Hello, world!
+                    <h2 style="font-family: Courier;">
+                        Hello, fellow gamers!
                     </h2>
-                    <p>
-                        This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
+                    <p style="font-family: Courier;">
+                        This site was created by Among Us players, for Among Us players. Come join us and we will rule out the Imposters together :)
                     </p>
-                    <small>Current active users: {{ countt }}</small>
+                    <!-- <small>Current active users: {{ countt }}</small> -->
                     <p>
-                        <a class="btn btn-primary btn-large" href="#">Learn more</a>
+                        <a class="btn btn-primary btn-large" href="#" style="font-family: Courier;">Learn more</a>
+                        <form method="POST" action="{% url 'ind' %}">
+                            {% csrf_token %}
+                        <button class="btn btn-success" style="width:fit-content; padding: 4px; margin:10px;font-family: Courier;"> Add a game </button>
+                        </form>
                     </p>
                 </div>
-                <table class="table">
+                <table class="table mainone" style="margin-left: 15%; width:75%;">
                     <thead>
                         <tr>
                             <th>
-                                #
+                                
                             </th>
                             <th>
-                                Product
+                                Game Name
                             </th>
                             <th>
-                                Payment Taken
+                                Game Code
                             </th>
                             <th>
-                                Status
+                                Time Posted
                             </th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>
-                                1
-                            </td>
-                            <td>
-                                TB - Monthly
-                            </td>
-                            <td>
-                                01/04/2012
-                            </td>
-                            <td>
-                                Default
-                            </td>
-                        </tr>
-                        <tr class="table-active">
-                            <td>
-                                1
-                            </td>
-                            <td>
-                                TB - Monthly
-                            </td>
-                            <td>
-                                01/04/2012
-                            </td>
-                            <td>
-                                Approved
-                            </td>
-                        </tr>
+                        {% for forum in forums %}
                         <tr class="table-success">
                             <td>
-                                2
+                                
+                            </td>
+                            <td>
+                                <a href='{{forum.link}}'><h3 style="font-family: Courier;">{{forum.game_name}}</h3></a>
+                            </td>
+                            <td>
+                                <p style="font-family: Courier;">{{forum.code}}</p>
+                            </td>
+                            <td>
+                                <p style="font-family: Courier;">{{forum.date_created}}</p>
+                            </td>
+                        </tr>
+                        <!-- <tr class="table-success">
+                            <td>
+                                
                             </td>
                             <td>
                                 TB - Monthly
@@ -139,7 +134,7 @@
                         </tr>
                         <tr class="table-warning">
                             <td>
-                                3
+                                
                             </td>
                             <td>
                                 TB - Monthly
@@ -153,7 +148,7 @@
                         </tr>
                         <tr class="table-danger">
                             <td>
-                                4
+                                
                             </td>
                             <td>
                                 TB - Monthly
@@ -164,9 +159,15 @@
                             <td>
                                 Call in to confirm
                             </td>
-                        </tr>
+                        </tr> -->
+                        {% endfor %}
                     </tbody>
                 </table>
+                <!-- <style>
+                .mainone {
+                    
+                }
+                </style> -->
             </div>
         </div>
         <div class="row">
