--- a/app/templates/app/forum.html
+++ b/app/templates/app/forum.html
@@ -1,5 +1,9 @@
+{% load crispy_forms_tags %}
 <head>
     <style>
+        .break {
+            margin-top: 15%;
+        }
         form{
             border:4px solid black;
             margin: 0 auto;
@@ -18,8 +22,11 @@
     gtag('config', 'UA-180175294-1');
     </script>
 </head>
+<div class="break">
+
+</div>
 <form action="{% url 'forumm' %}" method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <input type="submit" class="btn btn-success" value="submit">
 </form>
