--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DataFlair discussion forum</title>
+    <title>Among Us Chat</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"0>
     <style>
         .box{
@@ -49,12 +49,7 @@
                             <hr>     
                             <h4>Views from other users</h4>
                             {% for discuss in discussions %}
-                            {% for objs in discuss %}  
-                            {% if objs.forum == forum %}
-                               {{ objs.discuss }}
-                               <br>
-                            {% endif %}
-                            {% endfor %}
+                                
                             {% endfor %}
                             <form method="POST" action="{% url 'discussionn' %}">
                                 {% csrf_token %}
