--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>s</title>
+    <title>Among Us Chat | Home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180175294-1"></script>
@@ -19,9 +19,100 @@
 </head>
 <body>
     <style>
-    * {
-        font-family: Courier;
-    }
+            * {
+                font-family: Courier;
+            }
+        #more {display: none;}
+        h1 {
+            text-align: center;
+            font-family: Tahoma, Arial, sans-serif;
+            color: #06D85F;
+            margin: 80px 0;
+        }
+
+        .box {
+            width: 40%;
+            margin: 0 auto;
+            background: rgba(255,255,255,0.2);
+            padding: 35px;
+            border: 2px solid #fff;
+            border-radius: 20px/50px;
+            background-clip: padding-box;
+            text-align: center;
+        }
+
+        .button {
+            font-size: 1em;
+            padding: 10px;
+            color: #fff;
+            border: 2px solid #06D85F;
+            border-radius: 20px/50px;
+            text-decoration: none;
+            cursor: pointer;
+            transition: all 0.3s ease-out;
+        }
+        .button:hover {
+            background: #06D85F;
+        }
+
+        .overlay {
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0, 0, 0, 0.7);
+            transition: opacity 500ms;
+            visibility: hidden;
+            opacity: 0;
+        }
+        .overlay:target {
+            visibility: visible;
+            opacity: 1;
+        }
+
+        .popup {
+            margin: 70px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 5px;
+            width: 30%;
+            margin-top: 45%;
+            position: relative;
+            transition: all 5s ease-in-out;
+        }
+
+        .popup h2 {
+            margin-top: 0;
+            color: #333;
+            font-family: Tahoma, Arial, sans-serif;
+        }
+        .popup .close {
+            position: absolute;
+            top: 20px;
+            right: 30px;
+            transition: all 200ms;
+            font-size: 30px;
+            font-weight: bold;
+            text-decoration: none;
+            color: #333;
+        }
+        .popup .close:hover {
+            color: #06D85F;
+        }
+        .popup .content {
+            max-height: 30%;
+            overflow: auto;
+        }
+
+        @media screen and (max-width: 700px){
+        .box{
+            width: 70%;
+        }
+        .popup{
+            width: 70%;
+        }
+        }
     </style>
     <div class="container-fluid">
         <div class="row">
@@ -34,36 +125,40 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#" style="font-family: Courier;">Home</a>
+                                <a class="nav-link" href="{% url 'ind' %}" style="font-family: Courier;">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="#" style="font-family: Courier;">About</a>
+                                <a class="nav-link" href="{% url 'about' %}" style="font-family: Courier;">About</a>
                             </li>
                             <li class="nav-item dropdown active">
-                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" style="font-family: Courier;">Community</a>
+                                <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" style="font-family: Courier;">Community</a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#" style="font-family: Courier;">Action</a> <a class="dropdown-item" href="#" style="font-family: Courier;">Another action</a> <a class="dropdown-item" href="#" style="font-family: Courier;">Something else here</a>
+                                    <a class="dropdown-item" href="{% url 'donate' %}" style="font-family: Courier;">Donate</a> 
+                                    <a class="dropdown-item" href="{% url 'servers' %}" style="font-family: Courier;">Servers</a> 
+                                    <a class="dropdown-item" href="{% url 'affiliate' %}" style="font-family: Courier;">Affiliate Links</a>
                                     <div class="dropdown-divider">
-                                    </div> <a class="dropdown-item" href="#" style="font-family: Courier;">Separated link</a>
+                                    </div> <a class="dropdown-item" href="{% url 'sponsors' %}" style="font-family: Courier;">Sponsors</a>
                                 </div>
                             </li>
                         </ul>
-                        <form class="form-inline">
+                        <!-- <form class="form-inline">
                             <input class="form-control mr-sm-2" type="text" /> 
                             <button class="btn btn-primary my-2 my-sm-0" type="submit" style="font-family: Courier;">
                                 Search
                             </button>
-                        </form>
+                        </form> -->
                         <ul class="navbar-nav ml-md-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#" style="font-family: Courier;">FAQ <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="{% url 'faq' %}" style="font-family: Courier;">FAQ <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item dropdown active">
-                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" style="font-family: Courier;">Support</a>
+                                <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" style="font-family: Courier;">Support</a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#" style="font-family: Courier;">Direct Contact</a> <a class="dropdown-item" href="#" style="font-family: Courier;">Collaborate</a> <a class="dropdown-item" href="#" style="font-family: Courier;">Sponsor Us</a>
+                                    <a class="dropdown-item" href="{% url 'contact' %}" style="font-family: Courier;">Direct Contact</a> 
+                                    <a class="dropdown-item" href="{% url 'collaborate' %}" style="font-family: Courier;">Collaborate</a> 
+                                    <a class="dropdown-item" href="{% url 'sponsor' %}" style="font-family: Courier;">Sponsor Us</a>
                                     <div class="dropdown-divider">
-                                    </div> <a class="dropdown-item" href="#" style="color:red;font-family: Courier;">Report</a>
+                                    </div> <a class="dropdown-item" href="mailto:welcome.amongus@gmail.com?subject=Report" style="color:red;font-family: Courier; text-decoration: none;">Report</a>
                                 </div>
                             </li>
                         </ul>
@@ -77,13 +172,13 @@
                         This site was created by Among Us players, for Among Us players. Come join us and we will rule out the Imposters together :)
                     </p>
                     <!-- <small>Current active users: {{ countt }}</small> -->
-                    <p>
-                        <a class="btn btn-primary btn-large" href="#" style="font-family: Courier;">Learn more</a>
-                        <form method="POST" action="{% url 'ind' %}">
-                            {% csrf_token %}
-                        <button class="btn btn-success" style="width:fit-content; padding: 4px; margin:10px;font-family: Courier;"> Add a game </button>
+                    <div>
+                        <form method="POST" action="{% url 'forumm' %}" style="display:inline-block; margin-right: 10px;">
+                                {% csrf_token %}
+                            <button class="btn btn-success" style="width:fit-content;font-family: Courier;"> Add a game </button>
                         </form>
-                    </p>
+                        <a class="btn btn-primary btn-large" href="{% url 'about' %}" style="font-family: Courier; display:inline-block;">Learn more</a>
+                    </div>
                 </div>
                 <table class="table mainone" style="margin-left: 15%; width:75%;">
                     <thead>
@@ -103,13 +198,18 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for forum in forums %}
-                        <tr class="table-success">
+                            <!-- <h1>Popup/Modal Windows without JavaScript</h1>
+                            <div class="box">
+                                <a class="button" href="#popup1">Let me Pop up</a>
+                            </div> -->
+                        {% for forum in forus %}
+                        
+                        <tr class="table-success grow">
                             <td>
                                 
                             </td>
                             <td>
-                                <a href='{{forum.link}}'><h3 style="font-family: Courier;">{{forum.game_name}}</h3></a>
+                                <a href="{% url 'detail' forum.pk %}" style="text-decoration: none;"><h3 style="font-family: Courier;">{{forum.game_name}}</h3></a>
                             </td>
                             <td>
                                 <p style="font-family: Courier;">{{forum.code}}</p>
@@ -117,49 +217,16 @@
                             <td>
                                 <p style="font-family: Courier;">{{forum.date_created}}</p>
                             </td>
+                            <div id="popup1" class="overlay">
+                                <div class="popup">
+                                    <h2>What players are saying</h2>
+                                    <a class="close" href="#">&times;</a>
+                                    <div class="content">
+                                        
+                                    </div>
+                                </div>
+                            </div>
                         </tr>
-                        <!-- <tr class="table-success">
-                            <td>
-                                
-                            </td>
-                            <td>
-                                TB - Monthly
-                            </td>
-                            <td>
-                                02/04/2012
-                            </td>
-                            <td>
-                                Declined
-                            </td>
-                        </tr>
-                        <tr class="table-warning">
-                            <td>
-                                
-                            </td>
-                            <td>
-                                TB - Monthly
-                            </td>
-                            <td>
-                                03/04/2012
-                            </td>
-                            <td>
-                                Pending
-                            </td>
-                        </tr>
-                        <tr class="table-danger">
-                            <td>
-                                
-                            </td>
-                            <td>
-                                TB - Monthly
-                            </td>
-                            <td>
-                                04/04/2012
-                            </td>
-                            <td>
-                                Call in to confirm
-                            </td>
-                        </tr> -->
                         {% endfor %}
                     </tbody>
                 </table>
@@ -170,27 +237,36 @@
                 </style> -->
             </div>
         </div>
+        <br><br>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <h2>
-                    Heading
+                    General Chat (Anonymous)
                 </h2>
-                <p>
-                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-                </p>
+                {% for discuss in discussios %}
+                    
+                {% endfor %}
+                <form method="POST" action="{% url 'discussionn' %}">
+                    {% csrf_token %}
+                <button class="btn btn-success" style="width:fit-content; padding: 4px; margin:10px;">Add comment</button>
+                </form>
                 <p>
                     <a class="btn" href="#">View details »</a>
                 </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
             </div>
         </div>
     </div>
-
+    <footer class="container-fluid text-center">
+        </a>
+        <p>Made with ❤️ <a href="https://amonguschat.herokuapp.com/" target="_blank" title="Among Us Chat Online" style="text-decoration: none;">among us chat ©</a></p>
+        <div class="boxxed" style="border: 2px solid black; width:100px; margin-left:46%; margin-top:5px; margin-bottom: 15px;"><a href="http://ezweb.me/" target="_blank" style="text-decoration: none;">Hire Me</a></div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
