--- a/app/templates/app/collaborate.html
+++ b/app/templates/app/collaborate.html
@@ -71,7 +71,7 @@
                         </nav>
                         <div class="jumbotron">
                             <h2 style="font-family: Courier;">
-                                If you would like to work with us, shoot us an email at <a class="dropdown-item" href="mailto:welcome.amongus@gmail.com?subject=Hi! Let's work together" style="color:green;font-family: Courier; text-decoration: none;">welcome.amongus@gmail.com</a>
+                                If you would like to work with us, shoot us an email at <a href="mailto:welcome.amongus@gmail.com?subject=Hi! Let's work together" style="color:green;font-family: Courier; text-decoration: none;">welcome.amongus@gmail.com</a>
                             </h2>
                             <!-- <p style="font-family: Courier;">
                                 This site was created by Among Us players, for Among Us players. Come join us and we will rule out the Imposters together :)
