--- a/app/templates/app/faq.html
+++ b/app/templates/app/faq.html
@@ -108,7 +108,7 @@
             <div>
                 <details>
                     <summary title="Is this free?"><span style="font-family: Courier;">Is this free?</span></summary>
-                    <p class="faq-content">You will never need to pay to use our website. Although, you can support us by <a href="{% url 'donate' %}" style="text-decoration: none;">donating</a> or <a href="sponsor" style="text-decoration: none;">sponsoring us</a>.</p>
+                    <p class="faq-content">You will never need to pay to use our website. Although, you can support us by <a href="{% url 'donate' %}" style="text-decoration: none;">donating</a> or <a href="{% url 'sponsor' %}" style="text-decoration: none;">sponsoring us</a>.</p>
                 </details>
             </div>
             <div>
